[package]
name = "dhl-api"
version = "0.0.1"
authors = ["Sophie 'Sharky' Schumann <sharky@sharky.pw>"]
edition = "2018"
description = "Query public tracking info from the DHL.de website"
repository = "https://github.com/SharkyRawr/rust-dhl-api"
readme = "README.md"
license = "MIT"
license-file = "LICENSE"
keywords = ["api", "dhl", "tracking"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.3"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
